force-app/main/default/objects/Ai__c/Ai__c.object-meta.xml
<CustomObject>
    <label>Ai</label>
    <pluralLabel>Ais</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Ai Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>