force-app/main/default/objects/Ai__c/fields/Antagonize__c.field-meta.xml
<CustomField>
    <fullName>Antagonize__c</fullName>
    <label>Antagonize</label>
    <type>Lookup</type>
    <referenceTo>Antagonize__c</referenceTo>
    <relationshipName>Ai_Antagonize</relationshipName>
</CustomField>