force-app/main/default/objects/Ai__c/fields/Befriend__c.field-meta.xml
<CustomField>
    <fullName>Befriend__c</fullName>
    <label>Befriend</label>
    <type>Lookup</type>
    <referenceTo>Befriend__c</referenceTo>
    <relationshipName>Ai_Befriend</relationshipName>
</CustomField>