force-app/main/default/objects/Ai__c/fields/Building_prov__c.field-meta.xml
<CustomField>
    <fullName>Building_prov__c</fullName>
    <label>Building prov</label>
    <type>Lookup</type>
    <referenceTo>Building_prov__c</referenceTo>
    <relationshipName>Ai_Building_prov</relationshipName>
</CustomField>