force-app/main/default/objects/Ai__c/fields/Consolidate__c.field-meta.xml
<CustomField>
    <fullName>Consolidate__c</fullName>
    <label>Consolidate</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>