force-app/main/default/objects/Ai__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date</label>
    <type>Text</type>
    <length>255</length>
</CustomField>