force-app/main/default/objects/Ai__c/fields/Military_access__c.field-meta.xml
<CustomField>
    <fullName>Military_access__c</fullName>
    <label>Military access</label>
    <type>Lookup</type>
    <referenceTo>MilitaryAcces__c</referenceTo>
    <relationshipName>Ai_Military_access</relationshipName>
</CustomField>