force-app/main/default/objects/Ai__c/fields/Protect__c.field-meta.xml
<CustomField>
    <fullName>Protect__c</fullName>
    <label>Protect</label>
    <type>Lookup</type>
    <referenceTo>Protect__c</referenceTo>
    <relationshipName>Ai_Protect</relationshipName>
</CustomField>