force-app/main/default/objects/Ai__c/fields/Rival__c.field-meta.xml
<CustomField>
    <fullName>Rival__c</fullName>
    <label>Rival</label>
    <type>Lookup</type>
    <referenceTo>Rival__c</referenceTo>
    <relationshipName>Ai_Rival</relationshipName>
</CustomField>