force-app/main/default/objects/Ai__c/fields/Static__c.field-meta.xml
<CustomField>
    <fullName>Static__c</fullName>
    <label>Static</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>