force-app/main/default/objects/Ai__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>