force-app/main/default/objects/Ai__c/fields/Threat__c.field-meta.xml
<CustomField>
    <fullName>Threat__c</fullName>
    <label>Threat</label>
    <type>Lookup</type>
    <referenceTo>Threat__c</referenceTo>
    <relationshipName>Ai_Threat</relationshipName>
</CustomField>