force-app/main/default/objects/Ai__c/fields/War_with__c.field-meta.xml
<CustomField>
    <fullName>War_with__c</fullName>
    <label>War with</label>
    <type>Lookup</type>
    <referenceTo>WarWith__c</referenceTo>
    <relationshipName>Ai_War_with</relationshipName>
</CustomField>